sign up page ui design

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        viewBinding = true
+    }
 
 }
 
@@ -69,6 +72,10 @@ dependencies {
 // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+
+//UI Country Code Picker
+    implementation 'com.hbb20:ccp:2.5.4'
+
 
 
 }
